<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spice_bubbles"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="100sp"
        android:textStyle="normal"
        android:fontFamily="sans-serif"
        android:layout_marginTop="220dp"
        android:text="@string/heading"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginTop="180dp"
        android:textSize="18sp"
        android:textStyle="normal"
        android:text="@string/button_text"
        android:textAllCaps="false"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@drawable/button_round"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        android:text="@string/spice_text"/>


















</androidx.constraintlayout.widget.ConstraintLayout>