<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".SignIn">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:orientation="vertical"
        android:background="@drawable/linear_layout_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/sign_in"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"/>



        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/editText"
            android:layout_marginTop="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColor="@color/hint_color"
            android:paddingStart="10dp"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/editText"
            android:layout_marginTop="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="numberPassword"
            android:hint="@string/password"
            android:textColor="@color/hint_color"
            android:paddingStart="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_marginTop="30dp"
        android:textAlignment="viewStart"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:textStyle="normal"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/button_round"
        android:text="@string/sign_in"
        android:textAllCaps="false"/>


    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        android:text="@string/register_text"/>





</androidx.constraintlayout.widget.ConstraintLayout>